# fastapi_scheduler

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  requirements.txt
src/app/: .env.example  main.py  tasks.py
src/app/api/: routers.py
src/app/api/v1/: task.py
src/app/common/: log.py  redis.py  task.py
src/app/core/: conf.py  path_conf.py
src/app/schemas/: response.py  task.py
src/app/tasks/: print_demo.py
src/app/utils/: get_functions.py
