[project]
name = "fastapi-scheduler"
version = "0.0.1"
description = "Task scheduling system based on FastAPI with APScheduler"
authors = [
    {name = "Wu Clan", email = "jianhengwu0407@gmail.com"},
]
dependencies = [
    "apscheduler<4.0,>=3.2",
    "fastapi>=0.103.0",
    "pydantic>=2.4.2",
    "uvicorn>=0.23.2",
    "redis>=5.0.1",
    "pydantic-settings>=2.0.3",
    "loguru>=0.7.2",
    "pre-commit>=3.4.0",
    "asgiref>=3.7.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
