[project]
name = "fastapi-scheduler"
version = "0.0.1"
description = "Task scheduling system based on FastAPI with APScheduler 4.0"
authors = [
    {name = "Wu Clan", email = "jianhengwu0407@gmail.com"},
]
dependencies = [
    "apscheduler>=4.0.0a3",
    "fastapi>=0.103.0",
    "uvicorn>=0.23.2",
    "redis>=5.0.1",
    "pydantic-settings>=2.0.3",
    "loguru>=0.7.2",
    "asgiref>=3.7.2",
    "pre-commit>=3.4.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
line-length = 120
target-version = "py310"
cache-dir = "./.ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"
